--- a/papers/AAAI/report.bib
+++ b/papers/AAAI/report.bib
@@ -113,24 +113,22 @@
 
 @article{PerspectiveTaking,
   author = {Breazeal, Cynthia and Berlin, Matt and Brooks, Andrew G. and Gray, Jesse and Thomaz, Andrea Lockerd},
-  interhash = {2f7036c90759b9a9d6d9329e803b8879},
-  intrahash = {2783940c8455020c755a2776416cc2c2},
   journal = {Robotics and Autonomous Systems},
   number = 5,
   pages = {385-393},
   title = {Using perspective taking to learn from ambiguous demonstrations.},
-  url = {http://dblp.uni-trier.de/db/journals/ras/ras54.html#BreazealBBGT06},
   volume = 54,
   year = 2006,
-  timestamp = {2008-12-12T00:00:00.000+0100},
-  keywords = {dblp},
-  ee = {http://dx.doi.org/10.1016/j.robot.2006.02.004},
-  added-at = {2008-12-12T00:00:00.000+0100},
-  description = {dblp},
-  biburl = {http://www.bibsonomy.org/bibtex/22783940c8455020c755a2776416cc2c2/dblp},
-  date = {2008-12-12}
 }
 
+@ARTICLE{HRITraftonPerspective,
+    author = {J. Gregory Trafton and Nicholas L. Cassimatis and Magdalena D. Bugajska and Derek P. Brock and Farilee E. Mintz and Alan C. Schultz},
+    title = {Enabling effective human-robot interaction using perspective-taking in robots},
+    journal = {IEEE Transactions on Systems, Man, and Cybernetics},
+    year = {2005},
+    volume = {35},
+    pages = {460--470}
+}
 
 @INPROCEEDINGS{JenkinsLFD, 
   author={Grollman, D.H. and Jenkins, O.C.}, 
