Added a test case to the test_data_2 folder along with some noise for an 'Unknown primitive'.  Recorded output from this (without waypointing) in a figure, and with waypointing only as a CSV yet.

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -190,6 +190,15 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 
 \section{Results}
 \label{sec:result}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\linewidth]{output_nowaypoints_onetrial.eps}
+\caption{Initial Recognition Without Waypointing}
+\label{fig:output_nowaypoints_onetrial}
+\end{center}
+\end{figure}
+
 In this section we discuss our experimental results.
 
 \section{Related and Future Work}
