Added repeated trials test and outputs w/ and w/o waypointing.  Created figure for without waypointing.  Also, minor changes in QTable and Observer to improve waypointing

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -199,6 +199,14 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 \end{center}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\linewidth]{output_nowaypoints_repeatedtrials.eps}
+\caption{Repeated Recognition Over Time Without Waypointing}
+\label{fig:output_nowaypoints_repeatedtrials}
+\end{center}
+\end{figure}
+
 In this section we discuss our experimental results.
 
 \section{Related and Future Work}
