--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -207,6 +207,14 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 \end{center}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\linewidth]{output_waypoints_repeatedtrials.eps}
+\caption{Repeated Recognition Over Time With Waypointing}
+\label{fig:output_nowaypoints_repeatedtrials}
+\end{center}
+\end{figure}
+
 In this section we discuss our experimental results.
 
 \section{Related and Future Work}
